--- a/easyshop/WebContent/front/pay_qr.html
+++ b/easyshop/WebContent/front/pay_qr.html
@@ -39,7 +39,7 @@
                 $("#amount").html("扫码支付" + chargeObj.amount/100 + "元");
             },
             error: function (err) {
-                debugger;
+//              debugger;
                 console.log(err);
                 alert("网络繁忙,请稍后重试");
             }
